added sort index to table / and removed console logs

--- a/ui/nozerodays/new-ui.html
+++ b/ui/nozerodays/new-ui.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="new-ui.js"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="/last-7-days.html">Last 7 days</a></li>
-        <li><a href="https://docs.google.com/spreadsheets/d/1wb729JIsWWtBx7ZE7syMxEo2oCJcFqGn75a-kdbjydk/edit#gid=0" target="_blank" rel="noopener noreferrer">weights</a></li>
-        <li><a href="https://docs.google.com/spreadsheets/d/1UbYEuxCwcO8DCsCw5wcrG-G-tiYDP5MkaG4xmGEBLFg/edit#gid=0" target="_blank" rel="noopener noreferrer">Reps</a></li>
-        <li><a href="https://docs.google.com/spreadsheets/d/15c-NbP2-0bc1lEVwaLbnlDu6tvqft36o/edit#gid=1492518554">Pending Tasks count by half hour</a></li>
-        <li><a href="/shopping-list.html">Shopping list</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="/last-7-days.html">Last 7 days</a></li>
+      <li>
+        <a
+          href="https://docs.google.com/spreadsheets/d/1wb729JIsWWtBx7ZE7syMxEo2oCJcFqGn75a-kdbjydk/edit#gid=0"
+          target="_blank"
+          rel="noopener noreferrer"
+          >weights</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://docs.google.com/spreadsheets/d/1UbYEuxCwcO8DCsCw5wcrG-G-tiYDP5MkaG4xmGEBLFg/edit#gid=0"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Reps</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://docs.google.com/spreadsheets/d/15c-NbP2-0bc1lEVwaLbnlDu6tvqft36o/edit#gid=1492518554"
+          >Pending Tasks count by half hour</a
+        >
+      </li>
+      <li><a href="/shopping-list.html">Shopping list</a></li>
     </ul>
 
-    <div id="main-new-table">
-
-    </div>
-</body>
+    <div id="PendingTasks"></div>
+    <div id="main-new-table"></div>
+  </body>
 </html>
-
